adding some todo items for voicemail profile.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,7 @@
  - add 'cd /path/to/asterisk/sounds; ln -s digits time' to install instructions -- neccessary for say engine to find the number files.
+ - the following areas still need to be built out in the comedian mail replica:
+   - advanced options
+   - mailbox options
+   - forwarding a message
+   - operations after leaving a message
+
