cleaning up TODO.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,10 +6,10 @@
      - make call
      - leave message
    - forwarding a message
-   - operations after leaving a message
  - figure out how to work the record_trim script into Jester -- perhaps as an
    action in the record module?
  - remove any references to actual sound files, replace with phrases
  - comment voicemail profile sequences
  - move configurable items from sequences into profile variables
  - group messages
+ - look into various core caching strategies to improve performance
