--- a/TODO.txt
+++ b/TODO.txt
@@ -4,12 +4,15 @@
      - reply
      - callback
      - make call
-     - leave message
    - forwarding a message
  - figure out how to work the record_trim script into Jester -- perhaps as an
    action in the record module?
  - remove any references to actual sound files, replace with phrases
  - comment voicemail profile sequences
  - move configurable items from sequences into profile variables
- - group messages
  - look into various core caching strategies to improve performance
+ - add mailbox_provisioned column to mailbox table, check and provision
+   mailbox if not provisioned
+ - three events fired, 'mailbox updated', 'message left', 'messages checked'.
+ - restructure/index database tables
+ - fix workflow for outdialing to operator after leaving a message
