--- a/TODO.txt
+++ b/TODO.txt
@@ -11,8 +11,7 @@
  - comment voicemail profile sequences
  - move configurable items from sequences into profile variables
  - look into various core caching strategies to improve performance
- - add mailbox_provisioned column to mailbox table, check and provision
-   mailbox if not provisioned
+ - check and provision mailbox if not provisioned
  - three events fired, 'mailbox updated', 'message left', 'messages checked'.
  - restructure/index database tables
  - fix workflow for outdialing to operator after leaving a message
