--- a/profiles/voicemail/INSTALL.txt
+++ b/profiles/voicemail/INSTALL.txt
@@ -77,4 +77,21 @@ assume you already have Jester installed correctly:
         <action application="lua" data="jester/jester.lua voicemail login $2"/>
         <action application="hangup"/>
       </condition>
+      <!-- Operator extension. -->
+      <extension name="operator">
+        <condition field="destination_number" expression="^operator$" break="on-true">
+          <!-- Do stuff here to handle dialing the operator. -->
+        </condition>
+      </extension>
+      <!-- Call outside number extension -->
+      <extension name="call_outside_number">
+        <condition field="destination_number" expression="^call_outside_number$" break="on-true">
+          <!--
+            Do stuff here to handle dialing an outside line.  The number
+            to call is stored in the channel variable
+            'voicemail_call_outside_number'.
+          -->
+          <action application="say" data="en number iterated ${voicemail_call_outside_number}"/>
+        </condition>
+      </extension>
     </extension>
