--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
  - help system could use a table of contents feature.
- - the following areas still need to be built out in the comedian mail replica:
-   - reply in advanced options
  - figure out how to work the record_trim script into Jester -- perhaps as an
    action in the record module?
  - remove any references to actual sound files, replace with phrases
@@ -9,3 +7,6 @@
  - look into various core caching strategies to improve performance
  - three events fired, 'mailbox updated', 'message left', 'messages checked'.
  - restructure/index database tables
+ - data_load_count action
+ - data_query_action
+ - event module for firing Jester custom events
