--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
  - help system could use a table of contents feature.
  - figure out how to work the record_trim script into Jester -- perhaps as an
    action in the record module?
- - comment voicemail profile sequences
  - look into various core caching strategies to improve performance
  - restructure/index database tables
- - profile-level config option for timeout on collecting user digits
- - profile-level config option for min/max number of digits in an extension
+ - voicemail_group -> message_group
