add list of profile/user config options that still need to be added.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,24 @@
  - look into various core caching strategies to improve performance
  - restructure/index database tables
  - voicemail_group -> message_group
+ - register cleanup of deleted messages in exit loop.
+ - profile-wide settings to add
+   - maximumm length of recorded message
+   - maximumm length of recorded greeting
+   - number of seconds of silence before ending recording
+   - 'silence threshold' for recordings
+   - maximum number of login attempts
+   - email server 'from' name
+   - go to next message after a command? (need to figure out which commands
+     this responds to)
+   - exit extension
+   - language
+   - warning when temp greeting exists
+ - user-wide settings to add
+   - server email address?
+   - operator outdial
+   - callback
+   - dialout
+   - exit extension
+   - language
+
