--- a/TODO.txt
+++ b/TODO.txt
@@ -4,4 +4,7 @@
  - look into various core caching strategies to improve performance
  - user settings to add
    - next_after_command (need to figure out which commands this responds to)
-
+ - profile-wide setting to specify a sound file to play when an invalid key is
+   pressed
+ - simple event consumer script for voicemail profile events, that catches
+   them and calls configurable external scripts
